--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/chihhac/Portfoilio/tree/main/Heart%20Valve-related%20analysis/FDA%20Audit">Medical Device Data Collection and Cleaning in Python<br />
 									(API & Web scraping)</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>Built API and web scraping models to gather and clean data from different FDA databases.</p>
 								</header>
 								<a href="https://github.com/chihhac/Portfoilio/tree/main/Heart%20Valve-related%20analysis/FDA%20Audit" class="image main"><img src="images/medical device.webp" alt="" /></a>
 								<ul class="actions special">
@@ -65,38 +63,48 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Emotion Classifer<br />
+										<h2><a href="https://github.com/chihhac/Portfoilio/blob/main/Emotion%20NLP%20classifier/Emotion%20NLP%20using%20Kaggle.ipynb">Emotion Classifer<br />
 										modeling</a></h2>
 									</header>
-									<a href="https://github.com/chihhac/Portfoilio/blob/main/Emotion%20NLP%20classifier/Emotion%20NLP%20using%20Kaggle.ipynb" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/chihhac/Portfoilio/blob/main/Emotion%20NLP%20classifier/Emotion%20NLP%20using%20Kaggle.ipynb" class="image fit"><img src="images/emoji.jpg" alt="" /></a>
+									<p>Utilized the text data to build machine learning models(NLP) and help restaurants to recognize the reviews on Yelp and grow the business.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/chihhac/Portfoilio/blob/main/Emotion%20NLP%20classifier/Emotion%20NLP%20using%20Kaggle.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Customer Personality<br />
+										<h2><a href="https://github.com/chihhac/Portfoilio/blob/main/Customer%20Personality%20Analysis/customer-personality-analysis.ipynb">Customer Personality<br />
 											Analysis</a></h2>
 									</header>
-									<a href="https://github.com/chihhac/Portfoilio/blob/main/Customer%20Personality%20Analysis/customer-personality-analysis.ipynb" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/chihhac/Portfoilio/blob/main/Customer%20Personality%20Analysis/customer-personality-analysis.ipynb" class="image fit"><img src="images/customer.jpg" alt="" /></a>
+									<p>Analyzed customer data with machine learning method to profile purchasers and boost average cart value .</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/chihhac/Portfoilio/blob/main/Customer%20Personality%20Analysis/customer-personality-analysis.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Boba shop<br />
+										<h2><a href="https://github.com/chihhac/Portfoilio/blob/main/BobaShop_Analysis_R_hackathon-2022-04/censusscrape.R">Boba shop<br />
 										Analysis in R</a></h2>
 									</header>
-									<a href="https://github.com/chihhac/Portfoilio/blob/main/BobaShop_Analysis_R_hackathon-2022-04/censusscrape.R" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/chihhac/Portfoilio/blob/main/BobaShop_Analysis_R_hackathon-2022-04/censusscrape.R" class="image fit"><img src="images/boba.jpg" alt="" /></a>
+									<p>Identified the best location for a boba shop business in Orange County through building machine learning models.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/chihhac/Portfoilio/blob/main/BobaShop_Analysis_R_hackathon-2022-04/censusscrape.R" class="button">View Project</a></li>
 									</ul>
 								</article>
-
+								<article>
+									<header>
+										<h2><a href="https://github.com/chihhac/Portfoilio/blob/main/CovidAnalysis/CovidAnalysis.sql">Covid-19<br />
+										Analysis in SQL</a></h2>
+									</header>
+									<a href="https://github.com/chihhac/Portfoilio/blob/main/CovidAnalysis/CovidAnalysis.sql" class="image fit"><img src="images/covid19vac.jpg" alt="" /></a>
+									<p>Investigated whether Covid-19 vaccines are useful or not and their efficiency through EDA.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/chihhac/Portfoilio/blob/main/CovidAnalysis/CovidAnalysis.sql" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
